Bug 264607 - Creating a new mobile connection on KNetworkManager
Summary: Creating a new mobile connection on KNetworkManager
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Lamarque V. Souza
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-28 10:45 UTC by armando.fella
Modified: 2011-02-18 21:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description armando.fella 2011-01-28 10:45:30 UTC
Application: kcmshell4 ()
KDE Platform Version: 4.5.5 (KDE 4.5.5)
Qt Version: 4.7.1
Operating System: Linux 2.6.35.10-74.fc14.x86_64 x86_64
Distribution: "Fedora release 14 (Laughlin)"

-- Information about the crash:
- What I was doing when the application crashed:
I was creating a new mobile connection in KNetworkManager selecting new device and not the one suggested as installed. Clicking next button. My key was usb connected. Vodafone k3565

-- Backtrace:
Application: KDE Control Module (kcmshell4), signal: Segmentation fault
[KCrash Handler]
#6  0x00007f436354d248 in MobileConnectionWizard::initializePage (this=0x1b44690, id=<value optimized out>) at /usr/src/debug/networkmanagement-0.9/settings/config/mobileconnectionwizard.cpp:103
#7  0x00000036d40b1cff in QWizardPrivate::switchToPage (this=0x1b44f20, newId=<value optimized out>, direction=<value optimized out>) at dialogs/qwizard.cpp:849
#8  0x00000036d40b24f8 in QWizard::qt_metacall (this=0x1b44690, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x7fffb2974540) at .moc/release-shared/moc_qwizard.cpp:170
#9  0x00007f4363545820 in MobileConnectionWizard::qt_metacall (this=0x1b44690, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffb2974540) at /usr/src/debug/networkmanagement-0.9/x86_64-redhat-linux-gnu/settings/config/moc_mobileconnectionwizard.cpp:78
#10 0x000000322e57004f in QMetaObject::activate (sender=0x1b27540, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fffb2974540) at kernel/qobject.cpp:3272
#11 0x00000036d42288a2 in QAbstractButton::clicked (this=<value optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#12 0x00000036d3f70c9b in QAbstractButtonPrivate::emitClicked (this=<value optimized out>) at widgets/qabstractbutton.cpp:546
#13 0x00000036d3f7226b in QAbstractButtonPrivate::click (this=0x1b43370) at widgets/qabstractbutton.cpp:539
#14 0x00000036d3f724dc in QAbstractButton::mouseReleaseEvent (this=0x1b27540, e=0x7fffb2974ec0) at widgets/qabstractbutton.cpp:1121
#15 0x00000036d3c08fe8 in QWidget::event (this=0x1b27540, event=0x7fffb2974ec0) at kernel/qwidget.cpp:8200
#16 0x00000036d3bb78c4 in QApplicationPrivate::notify_helper (this=0x175e6f0, receiver=0x1b27540, e=0x7fffb2974ec0) at kernel/qapplication.cpp:4445
#17 0x00000036d3bbcc5a in QApplication::notify (this=<value optimized out>, receiver=0x1b27540, e=0x7fffb2974ec0) at kernel/qapplication.cpp:4006
#18 0x00000036d4e20596 in KApplication::notify (this=0x7fffb29773f0, receiver=0x1b27540, event=0x7fffb2974ec0) at /usr/src/debug/kdelibs-4.5.5/kdeui/kernel/kapplication.cpp:310
#19 0x000000322e55b7ac in QCoreApplication::notifyInternal (this=0x7fffb29773f0, receiver=0x1b27540, event=0x7fffb2974ec0) at kernel/qcoreapplication.cpp:732
#20 0x00000036d3bb88c5 in sendEvent (receiver=0x1b27540, event=0x7fffb2974ec0, alienWidget=0x1b27540, nativeWidget=0x1b44690, buttonDown=0x36d468b938, lastMouseReceiver=..., spontaneous=true) at ../../src/corelib/kernel/qcoreapplication.h:215
#21 QApplicationPrivate::sendMouseEvent (receiver=0x1b27540, event=0x7fffb2974ec0, alienWidget=0x1b27540, nativeWidget=0x1b44690, buttonDown=0x36d468b938, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3105
#22 0x00000036d3c36868 in QETWidget::translateMouseEvent (this=0x1b44690, event=<value optimized out>) at kernel/qapplication_x11.cpp:4438
#23 0x00000036d3c34f49 in QApplication::x11ProcessEvent (this=0x7fffb29773f0, event=0x7fffb2975810) at kernel/qapplication_x11.cpp:3564
#24 0x00000036d3c5c896 in x11EventSourceDispatch (s=0x1762520, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:148
#25 0x00000037e8c41e33 in g_main_dispatch (context=0x17611f0) at gmain.c:2149
#26 g_main_context_dispatch (context=0x17611f0) at gmain.c:2702
#27 0x00000037e8c42610 in g_main_context_iterate (context=0x17611f0, block=1, dispatch=1, self=<value optimized out>) at gmain.c:2780
#28 0x00000037e8c428ad in g_main_context_iteration (context=0x17611f0, may_block=1) at gmain.c:2843
#29 0x000000322e5868bf in QEventDispatcherGlib::processEvents (this=0x1746f90, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#30 0x00000036d3c5c59e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:207
#31 0x000000322e55ab42 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#32 0x000000322e55ad8c in QEventLoop::exec (this=0x7fffb2975b20, flags=...) at kernel/qeventloop.cpp:201
#33 0x00000036d4070bfe in QDialog::exec (this=0x1b44690) at dialogs/qdialog.cpp:552
#34 0x00007f4363546cd0 in ManageConnectionWidget::addClicked (this=0x18f6f70) at /usr/src/debug/networkmanagement-0.9/settings/config/manageconnectionwidget.cpp:262
#35 0x00007f4363545674 in ManageConnectionWidget::qt_metacall (this=0x18f6f70, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffb2975cf0) at /usr/src/debug/networkmanagement-0.9/x86_64-redhat-linux-gnu/settings/config/moc_manageconnectionwidget.cpp:92
#36 0x000000322e57004f in QMetaObject::activate (sender=0x19b2060, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fffb2975cf0) at kernel/qobject.cpp:3272
#37 0x00000036d42288a2 in QAbstractButton::clicked (this=<value optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#38 0x00000036d3f70c9b in QAbstractButtonPrivate::emitClicked (this=<value optimized out>) at widgets/qabstractbutton.cpp:546
#39 0x00000036d3f7226b in QAbstractButtonPrivate::click (this=0x19b20a0) at widgets/qabstractbutton.cpp:539
#40 0x00000036d3f724dc in QAbstractButton::mouseReleaseEvent (this=0x19b2060, e=0x7fffb2976670) at widgets/qabstractbutton.cpp:1121
#41 0x00000036d3c08fe8 in QWidget::event (this=0x19b2060, event=0x7fffb2976670) at kernel/qwidget.cpp:8200
#42 0x00000036d3bb78c4 in QApplicationPrivate::notify_helper (this=0x175e6f0, receiver=0x19b2060, e=0x7fffb2976670) at kernel/qapplication.cpp:4445
#43 0x00000036d3bbcc5a in QApplication::notify (this=<value optimized out>, receiver=0x19b2060, e=0x7fffb2976670) at kernel/qapplication.cpp:4006
#44 0x00000036d4e20596 in KApplication::notify (this=0x7fffb29773f0, receiver=0x19b2060, event=0x7fffb2976670) at /usr/src/debug/kdelibs-4.5.5/kdeui/kernel/kapplication.cpp:310
#45 0x000000322e55b7ac in QCoreApplication::notifyInternal (this=0x7fffb29773f0, receiver=0x19b2060, event=0x7fffb2976670) at kernel/qcoreapplication.cpp:732
#46 0x00000036d3bb88c5 in sendEvent (receiver=0x19b2060, event=0x7fffb2976670, alienWidget=0x19b2060, nativeWidget=0x1892330, buttonDown=0x36d468b938, lastMouseReceiver=..., spontaneous=true) at ../../src/corelib/kernel/qcoreapplication.h:215
#47 QApplicationPrivate::sendMouseEvent (receiver=0x19b2060, event=0x7fffb2976670, alienWidget=0x19b2060, nativeWidget=0x1892330, buttonDown=0x36d468b938, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3105
#48 0x00000036d3c36868 in QETWidget::translateMouseEvent (this=0x1892330, event=<value optimized out>) at kernel/qapplication_x11.cpp:4438
#49 0x00000036d3c34f49 in QApplication::x11ProcessEvent (this=0x7fffb29773f0, event=0x7fffb2976fc0) at kernel/qapplication_x11.cpp:3564
#50 0x00000036d3c5c896 in x11EventSourceDispatch (s=0x1762520, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:148
#51 0x00000037e8c41e33 in g_main_dispatch (context=0x17611f0) at gmain.c:2149
#52 g_main_context_dispatch (context=0x17611f0) at gmain.c:2702
#53 0x00000037e8c42610 in g_main_context_iterate (context=0x17611f0, block=1, dispatch=1, self=<value optimized out>) at gmain.c:2780
#54 0x00000037e8c428ad in g_main_context_iteration (context=0x17611f0, may_block=1) at gmain.c:2843
#55 0x000000322e5868bf in QEventDispatcherGlib::processEvents (this=0x1746f90, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#56 0x00000036d3c5c59e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:207
#57 0x000000322e55ab42 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#58 0x000000322e55ad8c in QEventLoop::exec (this=0x7fffb29772d0, flags=...) at kernel/qeventloop.cpp:201
#59 0x00000036d4070bfe in QDialog::exec (this=0x1892330) at dialogs/qdialog.cpp:552
#60 0x00000036d560789d in kdemain (_argc=24502672, _argv=0x7fffb29775e0) at /usr/src/debug/kdebase-runtime-4.5.5/kcmshell/main.cpp:285
#61 0x00000037e901ee7d in __libc_start_main (main=0x4007c0 <main(int, char**)>, argc=5, ubp_av=0x7fffb2977b78, init=<value optimized out>, fini=<value optimized out>, rtld_fini=<value optimized out>, stack_end=0x7fffb2977b68) at libc-start.c:226
#62 0x00000000004006e9 in _start ()

Reported using DrKonqi
Comment 1 Dario Andres 2011-01-29 13:51:38 UTC
[Comment from a bug triager]
Related to bug 262178 and bug 256031
Regards
Comment 2 Lamarque V. Souza 2011-02-18 21:14:16 UTC
Git commit 0067120657e1f4024f9d11a635934010a1e463e8 by Lamarque V. Souza.
Committed on 18/02/2011 at 21:10.
Pushed by lvsouza into branch 'master'.

Modifications to fix bug 264607 and some other minor fixes.

BUG: 264607

M  +24   -37   settings/config/mobileconnectionwizard.cpp     
M  +1    -1    settings/config/mobileconnectionwizard.h     
M  +3    -3    settings/config/mobileproviders.cpp     
M  +2    -2    settings/config/mobileproviders.h     

http://commits.kde.org/networkmanagement/0067120657e1f4024f9d11a635934010a1e463e8