Modifications to fix bug 264607 and some other minor fixes.

BUG: 264607